# LibreDrive

./: .gitignore  README.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/providers/: auth_provider.dart  files_provider.dart  network_provider.dart  storage_provider.dart
flutter_app/lib/screens/: splash_screen.dart
flutter_app/lib/screens/auth/: create_account_screen.dart  recover_account_screen.dart  seed_phrase_screen.dart  welcome_screen.dart
flutter_app/lib/screens/files/: files_screen.dart
flutter_app/lib/screens/home/: home_screen.dart
flutter_app/lib/screens/home/widgets/: network_status_card.dart  quick_actions.dart  recent_files.dart  storage_card.dart
flutter_app/lib/screens/settings/: settings_screen.dart
flutter_app/lib/services/: crypto_service.dart  database_service.dart  rust_bridge.dart  secure_storage_service.dart  seed_phrase_service.dart
flutter_app/lib/theme/: app_theme.dart
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_core/src/crypto/: encryption.rs  hashing.rs  mod.rs
rust_core/src/identity/: keys.rs  mod.rs  seed.rs
rust_core/src/p2p/: discovery.rs  mod.rs  node.rs  protocol.rs  storage_protocol.rs
rust_core/src/storage/: erasure.rs  file_manager.rs  mod.rs  quota.rs
