[package]
name = "cloudp2p_core"
version = "0.1.0"
edition = "2021"
authors = ["CloudP2P Team"]
description = "Decentralized P2P storage core - secure, private, censorship-resistant"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "cloudp2p_core"

[dependencies]
# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "dns",
    "websocket",
    "kad",
    "gossipsub",
    "identify",
    "relay",
    "dcutr",
    "autonat",
    "upnp",
    "mdns",
    "request-response",
    "cbor",
    "macros",
    "serde",
] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# BIP39 Seed Phrase
bip39 = "2.0"

# Erasure Coding
reed-solomon-erasure = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Database (local storage)
sled = "0.34"
rocksdb = { version = "0.22", optional = true }

# FFI for Flutter (optional - enable when building with flutter_rust_bridge)
# flutter_rust_bridge = "2.0"
# uniffi = { version = "0.25", optional = true }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
bs58 = "0.5"
hex = "0.4"
mime_guess = "2.0"
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
criterion = "0.5"

[features]
default = ["sqlite"]
sqlite = []
rocksdb-backend = ["rocksdb"]
mobile = []
desktop = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
